stop adding bugs! after logging out, stack trace was getting cleared, and while staying in the application if we clicked on login, home fragment wasn't getting context to its activity

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,7 +24,7 @@
             app:destination="@id/registerFragment" />
         <action
             android:id="@+id/action_loginFragment_to_homePageFragment"
-            app:destination="@id/homePageFragment" />
+            app:destination="@id/homePageFragment"/>
     </fragment>
     <fragment
         android:id="@+id/homePageFragment"
@@ -40,9 +40,7 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_homePageFragment_to_loginFragment"
-            app:destination="@id/loginFragment"
-            app:popUpTo="@+id/nav_graph"
-            app:popUpToInclusive="true" />
+            app:destination="@id/loginFragment"/>
     </fragment>
     <fragment
         android:id="@+id/confirmationFragment"
