--- a/app/src/main/res/layout/itemtemplate.xml
+++ b/app/src/main/res/layout/itemtemplate.xml
@@ -19,20 +19,34 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="10dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/sharp_grotesk_medium20"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:text="TextView"
-            android:textColor="@color/white"
-            android:textSize="22sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/sharp_grotesk_medium20"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="TextView"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/info"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignTop="@+id/title"
+                android:layout_alignBottom="@id/title"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                app:srcCompat="@drawable/ic_eye" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/templateDate"
@@ -42,5 +56,7 @@
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/sharp_grotesk_light20"
             android:textColor="@color/white" />
+
     </LinearLayout>
+
 </com.google.android.material.card.MaterialCardView>
