--- a/app/src/main/res/layout/fragment_confirmation.xml
+++ b/app/src/main/res/layout/fragment_confirmation.xml
@@ -132,7 +132,8 @@
         app:layout_constraintBottom_toBottomOf="@id/con10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/con6" />
+        app:layout_constraintTop_toTopOf="@id/con6"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/appName"
@@ -185,6 +186,7 @@
         android:text="Change Date"
         android:textColor="@color/blue"
         android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/dateSelected"
         app:layout_constraintTop_toBottomOf="@id/dateSelected" />
 
@@ -262,6 +264,7 @@
         android:gravity="start|center"
         android:text="Change Template"
         android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/view4"
         app:layout_constraintEnd_toEndOf="@id/dateSelected"
         app:layout_constraintTop_toBottomOf="@id/templateSelectedText" />
