--- a/app/src/main/res/layout/template_bottom_sheet.xml
+++ b/app/src/main/res/layout/template_bottom_sheet.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,9 +16,9 @@
             android:layout_marginTop="10dp"
             android:fontFamily="@font/sharp_grotesk_light20"
             android:gravity="center"
+            android:text="DSA Self Paced Course"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:text="DSA Self Paced Course" />
+            android:textStyle="bold" />
 
         <WebView
             android:id="@+id/webView2"
@@ -27,7 +26,6 @@
             android:layout_height="match_parent"
             android:layout_below="@id/subjectRequest"
             android:layout_marginTop="10dp" />
-
 
 
     </RelativeLayout>
